--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
     "astro": "^4.10.2",
     "tailwindcss": "^3.4.4",
     "typescript": "^5.4.5"
+  },
+  "devDependencies": {
+    "@types/node": "^20.14.7"
   }
 }
